fix(amplenote): add --color-background-action-high-contrast-rgb

--- a/styles/amplenote/catppuccin.user.css
+++ b/styles/amplenote/catppuccin.user.css
@@ -94,6 +94,7 @@
       --color-background-action-low-contrast: fade(@accent-color, 50%);
       --color-background-action-medium-contrast: fade(@accent-color, 60%);
       --color-background-action-high-contrast: @accent-color;
+      --color-background-action-high-contrast-rgb: #rgbify(@accent-color) [];
 
       --color-border-primary: @surface0;
       --color-border-tertiary: @surface1;
